...
        Stufe.jungpfadfinder,
        truppKompassId,
      ),
      DemoPerson(
        '1022',
        'Hanna',
        'Albrecht',
        10,
        0,
        Stufe.jungpfadfinder,
        truppKompassId,
      ),
      DemoPerson(
...
